--- a/blank/projects/sorta.html
+++ b/blank/projects/sorta.html
@@ -19,6 +19,9 @@
 		<a></a><br />
 		<a></a><br />
 		<p> Download: </p>
+		<a href="https://cdn.discordapp.com/attachments/1114202827808583891/1114203597626933299/SORTA016zipinstaller.zip">Download 0.1.6</a><br />
+		<a></a><br />
+		<a href="https://e.pcloud.link/publink/show?code=XZCWTuZsY59efjYV052NRUlHvaIKm0NTrcy">Download 0.1.6 (without installer)</a><br />
 		<a href="https://mega.nz/file/FyY3zIoB#6KvjqEGHg9ZLRJjjM7ZJJ8-ZL89tJlYATqWMxa07snQ">Download 0.1.5</a><br />
 		<a></a><br />
 		<a href="https://e.pcloud.link/publink/show?code=XZ3LbSZl5GfGvyhgqV2cQze2Xgz8YGxGTwX">Download 0.1.5 (without installer)</a><br />
@@ -37,7 +40,7 @@
 		<a></a><br />
 		<a href="https://www.mediafire.com/file/afkq9catbjxgkaz/SORTA008rarinstaller.rar/file">Download 0.0.8</a><br />
 		<a></a><br />
-		<a href="https://www.mediafire.com/file/hflbh3tvx8pppph/SORTA007rarinstaller.rar/file">СDownload 0.0.7</a><br />
+		<a href="https://www.mediafire.com/file/hflbh3tvx8pppph/SORTA007rarinstaller.rar/file">Download 0.0.7</a><br />
 		<a></a><br />
 		<a href="https://www.mediafire.com/file/azg5nagtxevwizs/SORTA006rarinstaller.rar/file">Download 0.0.6</a><br />
 		<a></a><br />
